--- a/libs/storybook/.storybook/preview-body.html
+++ b/libs/storybook/.storybook/preview-body.html
@@ -1,11 +1,12 @@
 <style>
-  html, body {
-    width: 100%;
-    height: 100%;
-  }
+    html,
+    body {
+        width: 100%;
+        height: 100%;
+    }
 
-  #root {
-    width: 100%;
-    height: 100%;
-  }
+    #root {
+        width: 100%;
+        height: 100%;
+    }
 </style>
