chore: comment out storybook

--- a/libs/storybook/.storybook/manager-head.html
+++ b/libs/storybook/.storybook/manager-head.html
@@ -1,4 +1,5 @@
 <title>Angular Three Documentation</title>
+<base href="/soba/">
 <meta
     name="description"
     content="Documentation site (Storybook) of Angular Three"
@@ -28,4 +29,4 @@
     content=" https://angular-three.netlify.app/ngt-logo.png"
 />
 <meta name="twitter:card" content="summary_large_image" />
-<link rel="icon" type="image/x-icon" href="/ngt-logo.svg" />
+<link rel="icon" type="image/x-icon" href="/soba/ngt-logo.svg" />
