chore(repo): format

--- a/libs/storybook/.storybook/manager-head.html
+++ b/libs/storybook/.storybook/manager-head.html
@@ -1,5 +1,5 @@
 <title>Angular Three Documentation</title>
-<base href="/soba/">
+<base href="/soba/" />
 <meta
     name="description"
     content="Documentation site (Storybook) of Angular Three"
