fix(soba): fix text; add storybook

--- a/libs/soba/.storybook/manager-head.html
+++ b/libs/soba/.storybook/manager-head.html
@@ -1,28 +1,28 @@
 <title>Angular Three Documentation</title>
-<base href="/soba/" />
+<base href="/" />
 <meta
     name="description"
-    content="Documentation site (Storybook) of Angular Three"
+    content="Documentation site (Storybook) of Angular Three Soba"
 />
 <meta name="author" content="Chau Tran" />
 <meta
     name="viewport"
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
 />
-<meta property="og:title" content="Angular Three Documentation" />
+<meta property="og:title" content="Angular Three - Soba" />
 <meta
     property="og:description"
-    content="Documentation site (Storybook) of Angular Three"
+    content="Documentation site (Storybook) of Angular Three Soba"
 />
 <meta property="og:url" content="https://angular-three.netlify.app" />
 <meta
     property="og:image"
     content="https://angular-three.netlify.app/ngt-logo.png"
 />
-<meta name="twitter:title" content="Angular Three Documentation" />
+<meta name="twitter:title" content="Angular Three Soba Documentation" />
 <meta
     name="twitter:description"
-    content="Documentation site (Storybook) of Angular Three"
+    content="Documentation site (Storybook) of Angular Three Soba"
 />
 <meta
     name="twitter:image"
