docs: setup build storybook

--- a/libs/soba/.storybook/manager-head.html
+++ b/libs/soba/.storybook/manager-head.html
@@ -1,5 +1,5 @@
 <title>Angular Three Documentation</title>
-<base href="/" />
+<base href="/%STORYBOOK_BASE_HREF%" />
 <meta
     name="description"
     content="Documentation site (Storybook) of Angular Three Soba"
