--- a/apps/sandbox/src/index.html
+++ b/apps/sandbox/src/index.html
@@ -6,6 +6,7 @@
         <base href="/" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="icon" type="image/x-icon" href="favicon.ico" />
+        <script src="https://cdn.tailwindcss.com"></script>
     </head>
     <body>
         <sandbox-root></sandbox-root>
