--- a/libs/soba/.storybook/manager-head.html
+++ b/libs/soba/.storybook/manager-head.html
@@ -9,9 +9,9 @@
 <meta property="og:title" content="Angular Three - Soba" />
 <meta property="og:description" content="Documentation site (Storybook) of Angular Three Soba" />
 <meta property="og:url" content="https://angular-three.netlify.app" />
-<meta property="og:image" content="https://angular-three.netlify.app/ngt-logo.png" />
+<meta property="og:image" content="https://angular-three.netlify.app/img/ngt-logo.png" />
 <meta name="twitter:title" content="Angular Three Soba Documentation" />
 <meta name="twitter:description" content="Documentation site (Storybook) of Angular Three Soba" />
-<meta name="twitter:image" content=" https://angular-three.netlify.app/ngt-logo.png" />
+<meta name="twitter:image" content=" https://angular-three.netlify.app/img/ngt-logo.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <link rel="icon" type="image/x-icon" href="/soba/ngt-logo.svg" />
